# economics-of-the-welfare-state

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  _check59.txt  _quarto.yml  cell_output.txt  clean_notebook_duplicates.py  cleanup_notebook.py  config.yaml  debug_notebook.py  diagnostic_output.txt  find_bug.py  find_regression_cells.py  fix_fstring.py  fix_notebook_hausman.py  fix_notebook_heterogeneity.py  fix_notebook_multiline.py  fix_notebook_names.py  fix_notebook_placement.py  index.qmd  integrate_professional.py  out.txt  presentation.qmd  pyproject.toml  requirements-lock.txt  requirements.txt  run_analysis.bat  run_analysis.sh  run_notebook_debug.py  setup.py  show_notebook_summary.py  temp_cell59.txt  temp_cell59_verify.txt  temp_error.txt  (+6 more)
.github/workflows/: ci.yml  deploy-web.yml
analysis/: README.md  analysis.R  analysis.do  master.csv  master.dta
data/final/: master_dataset.csv  master_dataset.dta  master_dataset.parquet
data/processed/: cpds_32countries_1980_2023.csv  cpds_32countries_1980_2023.parquet  dependency_ratio_32countries_1980_2023.csv  dependency_ratio_32countries_1980_2023.parquet  gdppc_32countries_1980_2023.csv  gdppc_32countries_1980_2023.parquet  inflation_32countries_1980_2023.csv  inflation_32countries_1980_2023.parquet  kofgi_32countries_1980_2023.csv  kofgi_32countries_1980_2023.parquet  ln_population_32countries_1980_2023.csv  ln_population_32countries_1980_2023.parquet  population_32countries_1980_2023.csv  population_32countries_1980_2023.parquet
data/raw/: Dependency_ratio.xlsx  GDP_per_capita.xlsx  Inflation_cpi.xlsx  KOF_index_raw.xlsx  Population_raw.xlsx
docs/: ARCHITECTURE.md  GETTING_STARTED.md  README.md  replication_notes.md
notebooks/: 00_quick_start.ipynb  01_cleaning_data.ipynb  02_modern_pipeline.ipynb  03_se_comparison.ipynb  04_driscoll_kraay_pipeline.ipynb  05_gfc_analysis.ipynb  extracted_cells.py
outputs/tables/: appendix_diagnostics.tex  baseline_regression_table.tex  baseline_regressions_post_china_shock.tex  baseline_regressions_post_gfc.tex  baseline_regressions_pre_china_shock.tex  baseline_regressions_pre_gfc.tex  chow_test_table.tex  cointegration_table.tex  component_regression_table.tex  correlation_matrix.csv  correlation_matrix.tex  diagnostics_table.tex  feedback_regression_table.tex  granger_causality_table.tex  hausman_table.tex  heterogeneity_regression_table.tex  heterogeneity_regressions_post_china_shock.tex  heterogeneity_regressions_post_gfc.tex  heterogeneity_regressions_pre_china_shock.tex  heterogeneity_regressions_pre_gfc.tex  interaction_regression_table.tex  marginal_effects_KOFCuGI.tex  marginal_effects_KOFEcGI.tex  marginal_effects_KOFFiGI.tex  marginal_effects_KOFGI.tex  marginal_effects_KOFInGI.tex  marginal_effects_KOFIpGI.tex  marginal_effects_KOFPoGI.tex  marginal_effects_KOFSoGI.tex  (+25 more)
paper/: appendix.tex  bibliography.bib  manuscript.tex  methods.md
reports/: quality_report.html
scripts/: consolidate_notebook.py  download_raw_data.py  fix_notebook_final.py  fix_notebook_imports.py  prepare_analysis.py  update_notebook_components.py
src/: cli.py  dashboard.py
tests/: test_analysis.py  test_baseline_interaction_regressions.py  test_cli.py  test_constants.py  test_correlations.py  test_econometrics.py  test_feedback_regressions.py  test_latex_injector.py  test_merge.py  test_notebook_imports.py  test_panel_utils.py  test_pipeline_smoke.py  test_regression_utils.py  test_trend_plots.py  test_utils.py  test_validation.py
web/: astro.config.mjs  build_log.txt  build_output.txt  build_output2.txt  build_output3.txt  err.txt  err2.txt  package-lock.json  package.json
(+80 files in other folders)
